[package]
name = "narrow_down"
version = "1.0.0"
edition = "2021"

[package.metadata.maturin]
name = "narrow_down._rust"

[lib]
name = "narrow_down"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
twox-hash = "1.6.3"
mur3 = "0.1.0"
numpy = "0.17.1"
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.0"
