[package]
name = "narrow_down"
version = "1.1.0"
edition = "2021"

[package.metadata.maturin]
name = "narrow_down._rust"

[lib]
name = "narrow_down"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
twox-hash = "1.6.3"
mur3 = "0.1.0"
numpy = "0.18.0"
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py37"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.0"
peroxide = "0.33.3"
bytes = "1.4.0"
prost = "0.11.9"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[build-dependencies]
prost-build = "0.11.9"
protox = "0.3.3"
