[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "linux"

[project]
name = "narrow-down"
version = "1.0.1"
description = "Fast fuzzy text search"
readme = "README.md"
requires-python = "<3.11,>=3.7"
license = {file = "LICENSE"}
keywords = ["narrow-down", "LSH", "minhash"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy<1.22; python_version < '3.8'",
    "numpy; python_version >= '3.8'",
    "typing_extensions",
]

[project.urls]
homepage = "https://github.com/chr1st1ank/narrow-down"
repository = "https://github.com/chr1st1ank/narrow-down"
documentation = "https://chr1st1ank.github.io/narrow-down"
"Bug Tracker" = "https://github.com/chr1st1ank/narrow-down/issues"

[project.optional-dependencies]
scylladb = [
    "scylla-driver"
]
docs = [
    "sphinx",
    "myst-parser",
    "nbconvert",
    "furo"
]
dev = [
    "pre-commit",
    "isort",
    "black",
    "jupyter",
    "nbqa",
    "nox",
    "mypy",
    "mypy-protobuf",
    "nbmake",
    "bump2version",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-profiling",
    "xdoctest",
    "coverage[toml]",
    "pytest-cov",
    "watchdog[watchmedo]",
    "narrow-down[scylladb,docs]"
]
experiments = [
    "pandas~=1.0",
    "tabulate",
    "tqdm"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["narrow_down"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if _descriptor._USE_C_DESCRIPTORS == False:",
  "if __name__ == __main__:",
  "def main"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_third_party = ["nox", ".nox", ".venv", "local"]

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/mypy
'''

[tool.mypy]
follow_imports = "silent"
python_version = "3.8"

check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "murmurhash.*",
    "nox.*",
    "scipy.*",
]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
